--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.4.2",
     "heredoc": "^1.3.1",
     "koa": "^1.2.1",
+    "lodash": "^4.14.0",
     "raw-body": "^2.1.7",
     "request": "^2.74.0",
     "sha1": "^1.1.1",
